# camdrive_arduino

./: CMakeLists.txt  README.md  package.xml  robot_hardware.xml
bringup/config/: camdrive_bot_controllers.yaml
bringup/launch/: camdrive_bot.launch.py
controllers/: camdive_arduino.yaml  robot_controller_example.yaml
description/ros2_control/: camdrive_bot.ros2_control.xacro
include/camdrive_arduino/: arduino_comms.h  arduino_comms.hpp  camdrive_arduino.h  camdrive_system.hpp  fake_robot.h  visibility_control.h  wheel.hpp
src/: arduino_comms.cpp  camdrive_arduino.cpp  camdrive_system.cpp  fake_robot.cpp  wheel.cpp
